# Math-Helper-Android

./: .gitignore  ANDROID_SETUP.md  GUIDE.md  IMPLEMENTATION_SUMMARY.md  README.md  agent.py  build.gradle.kts  gradle.properties  gradlew  langgraph.json  main.py  requirements.txt  server.py  settings.gradle.kts
.github/workflows/: build.yml
app/: build.gradle  build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  llama_jni.cpp
app/src/main/java/com/mathagent/: LlamaEngine.kt  MainActivity.kt  MathTools.kt  ModelManager.kt  ReActAgent.kt  SymPyBridge.kt
app/src/main/python/: sympy_bridge.py
app/src/main/res/mipmap-hdpi/: ic_launcher_round.xml
app/src/main/res/values/: strings.xml  themes.xml
client/: README.md  package-lock.json  package.json  tailwind.config.js  vite.config.ts
client/src/: App.tsx  index.css
client/src/components/: ChatMessage.tsx
tools/: visualize_graph.py
